<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preperationfragment.PreperationFragment3">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:src="@drawable/category_bg_busking"
            app:layout_constraintBottom_toTopOf="@+id/preperation_title3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/preperation_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/namsan_bold"
            android:gravity="center"
            android:text="@string/preperation_title3"
            android:textColor="@color/preperation_next_title_font_color"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/preperation_dsc3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/preperation_dsc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/namsan_bold"
            android:gravity="center"
            android:text="@string/preperation_description3"
            android:textColor="@color/preperation_next_title_font_color"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preperation_title3"
            app:layout_constraintVertical_chainStyle="packed" />


        <TextView
            android:id="@+id/preperation_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/preperation_next_btn_color"
            android:fontFamily="@font/namsan_bold"
            android:gravity="center"
            android:text="@string/preperation_start"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>